--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,25 +1,28 @@
-name: Apple Trailer Download with Manzana
+name: Apple Trailer Download with Manzana (Fixed)
 
 on:
   workflow_dispatch:
     inputs:
       video_url:
-        description: '直接粘贴 Apple TV+ 网页 URL (无需 m3u8)'
+        description: '粘贴 Apple TV+ 网页 URL'
         required: true
-      use_default:
-        description: '是否下载默认预告片 (自动选择最高画质)'
-        type: boolean
-        default: true
+      quality:
+        type: choice
+        description: '选择画质类型'
+        options:
+          - '4K (DoVi/HDR)'
+          - '1080p (SDR)'
+        default: '4K (DoVi/HDR)'
 
 jobs:
   manzana-job:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout (Self)
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Dependencies (FFmpeg & MP4Box)
+      - name: Install Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
@@ -29,28 +32,34 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Clone Manzana Repository
+      - name: Clone and Install
         run: |
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers
           pip install -r requirements.txt
 
-      - name: Execute Manzana
+      - name: Execute Manzana (Automated Input)
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          # 如果选了 default，则带上 -d 参数，实现非交互下载
-          if [ "${{ github.event.inputs.use_default }}" == "true" ]; then
-            python manzana.py "${{ github.event.inputs.video_url }}" -d
+          
+          # 模拟交互输入逻辑：
+          # 第一次输入：选择 Codec ID (0为DoVi, 1为SDR)
+          # 第二次输入：选择 分辨率 ID (通常0为最高)
+          # 第三次输入：选择 音频 (all 代表全部下载)
+          # 第四次输入：选择 字幕 (all 代表全部下载)
+          
+          if [ "${{ github.event.inputs.quality }}" == "4K (DoVi/HDR)" ]; then
+            # 顺序：Codec(0) -> Resolution(0) -> Audio(all) -> Subs(all)
+            printf "0\n0\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d
           else
-            # 注意：如果不选 -d，脚本会因为等待输入而超时挂掉
-            # 除非你通过 printf 给它喂入默认选项，例如：printf "1\n1\n1\n"
-            python manzana.py "${{ github.event.inputs.video_url }}"
+            # 顺序：Codec(1:SDR) -> Resolution(0) -> Audio(all) -> Subs(all)
+            printf "1\n0\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d
           fi
 
       - name: Upload Result
         uses: actions/upload-artifact@v4
         with:
-          name: Apple_Trailers
+          name: Apple_Trailers_Manzana
           path: |
              Manzana-Apple-TV-Plus-Trailers/*.mp4
              Manzana-Apple-TV-Plus-Trailers/*.mkv
