--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v2.0-Pathfinder)
+name: Apple Trailer Manzana (v2.1-Steady)
 
 on:
   workflow_dispatch:
@@ -24,30 +24,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: v2.0-Checkout
+      - name: v2.1-Checkout
         uses: actions/checkout@v4
 
-      - name: v2.0-Install Dependencies
+      - name: v2.1-Install Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
 
-      - name: v2.0-Set up Python
+      - name: v2.1-Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: v2.0-Clone and Install
+      - name: v2.1-Clone and Install
         run: |
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers
           pip install -r requirements.txt
 
-      - name: v2.0-Execute Manzana (Clean Logs)
+      - name: v2.1-Execute Manzana
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
           
-          # 定义输入序列：Range -> Stream -> AudioCodec -> AudioStream -> SubType -> SubStream
           if [ "${{ github.event.inputs.mode }}" == "4K_HDR_Best" ]; then
             INPUT_SEQ="0\n13\nall\nall\nall\nall\n"
           elif [ "${{ github.event.inputs.mode }}" == "1080p_SDR_Best" ]; then
@@ -56,29 +55,27 @@ jobs:
             INPUT_SEQ="${{ github.event.inputs.custom_sequence }}"
           fi
 
-          echo "启动下载，输入序列为: $INPUT_SEQ"
-          # 使用 grep 过滤冗余的 Fetching 详情，保留进度条
+          echo "正在下载: ${{ github.event.inputs.video_url }}"
+          # 过滤冗余的 Fetching segments 日志，保留下载进度和结果
           printf "$INPUT_SEQ" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
-      - name: v2.0-Organize Files (Global Search)
+      - name: v2.1-Move Result to Output
         if: always()
         run: |
-          mkdir -p output
-          echo "正在全盘搜索生成的视频文件..."
-          # 查找所有视频文件，排除隐藏目录，移动到 output 文件夹
-          find . -type f \( -name "*.mp4" -o -name "*.mkv" \) -not -path '*/.*' -exec mv {} ./output/ \;
+          # 在工作流根目录创建 output
+          mkdir -p final_output
           
-          echo "搜索结束。检查 output 目录："
-          if [ -z "$(ls -A ./output)" ]; then
-             echo "错误：未发现视频文件。显示当前目录结构进行排查："
-             find . -maxdepth 4 -not -path '*/.*'
-          else
-             ls -lh ./output
-          fi
+          echo "正在从 Manzana 目录提取成品文件..."
+          # 仅在 Manzana 工具目录下寻找生成的 mp4/mkv，并移动到外层
+          # 使用 -maxdepth 1 确保只在工具主目录找，不进入 Downloads(临时) 或其他深层目录
+          find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 1 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_output/ \;
+          
+          echo "检查提取结果："
+          ls -lh ./final_output
 
-      - name: v2.0-Upload Artifact
+      - name: v2.1-Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Apple_Video_v2.0
-          path: output/*
+          name: Apple_Video_v2.1
+          path: final_output/*
           retention-days: 1
