--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v2.1-Steady)
+name: Apple Trailer Manzana (v2.2-Scope)
 
 on:
   workflow_dispatch:
@@ -15,7 +15,7 @@ on:
           - 'Custom_IDs'
         default: '4K_HDR_Best'
       custom_sequence:
-        description: '若选 Custom_IDs，请填入序列 (如 0\n13\nall\nall\nall\nall\n)'
+        description: '若选 Custom_IDs，请填入序列'
         required: false
         default: ''
 
@@ -24,29 +24,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: v2.1-Checkout
+      - name: v2.2-Checkout
         uses: actions/checkout@v4
 
-      - name: v2.1-Install Dependencies
+      - name: v2.2-Install Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
 
-      - name: v2.1-Set up Python
+      - name: v2.2-Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: v2.1-Clone and Install
+      - name: v2.2-Clone and Install
         run: |
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers
           pip install -r requirements.txt
 
-      - name: v2.1-Execute Manzana
+      - name: v2.2-Execute Manzana
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          
           if [ "${{ github.event.inputs.mode }}" == "4K_HDR_Best" ]; then
             INPUT_SEQ="0\n13\nall\nall\nall\nall\n"
           elif [ "${{ github.event.inputs.mode }}" == "1080p_SDR_Best" ]; then
@@ -54,28 +53,32 @@ jobs:
           else
             INPUT_SEQ="${{ github.event.inputs.custom_sequence }}"
           fi
-
-          echo "正在下载: ${{ github.event.inputs.video_url }}"
-          # 过滤冗余的 Fetching segments 日志，保留下载进度和结果
           printf "$INPUT_SEQ" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
-      - name: v2.1-Move Result to Output
+      - name: v2.2-Locate and Move
         if: always()
         run: |
-          # 在工作流根目录创建 output
           mkdir -p final_output
+          echo "=== 路径审计：正在定位生成的视频文件 ==="
+          # 在整个工作区搜索 mp4，排除掉 final_output 目录本身
+          # 这将显示文件的真实路径，解决我们的困惑
+          find . -type f \( -name "*.mp4" -o -name "*.mkv" \) -not -path "./final_output/*" > file_list.txt
           
-          echo "正在从 Manzana 目录提取成品文件..."
-          # 仅在 Manzana 工具目录下寻找生成的 mp4/mkv，并移动到外层
-          # 使用 -maxdepth 1 确保只在工具主目录找，不进入 Downloads(临时) 或其他深层目录
-          find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 1 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_output/ \;
+          echo "查找到的文件位置："
+          cat file_list.txt
           
-          echo "检查提取结果："
+          echo "=== 开始移动文件 ==="
+          while read line; do
+            echo "正在移动: $line"
+            mv "$line" ./final_output/
+          done < file_list.txt
+
+          echo "=== 检查提取结果 ==="
           ls -lh ./final_output
 
-      - name: v2.1-Upload Artifact
+      - name: v2.2-Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Apple_Video_v2.1
+          name: Apple_Video_v2.2
           path: final_output/*
           retention-days: 1
