--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v3.0-Precision)
+name: Apple Trailer Manzana (v4.0-Strategist)
 
 on:
   workflow_dispatch:
@@ -6,16 +6,15 @@ on:
       video_url:
         description: '粘贴 Apple TV+ 网页 URL'
         required: true
-      mode:
+      action_type:
         type: choice
-        description: '选择下载预设'
+        description: '第一步：探测 ID 列表；第二步：正式下载'
         options:
-          - '4K_HDR_Best'
-          - '1080p_SDR_Best'
-          - 'Custom_IDs'
-        default: '4K_HDR_Best'
+          - 'Probe_IDs_Only'
+          - 'Formal_Download'
+        default: 'Probe_IDs_Only'
       custom_sequence:
-        description: '若选 Custom_IDs，请填入序列'
+        description: '【仅正式下载使用】填入 ID 序列 (例如 0\n13\nall\n4,40\nall\n2,50\n)'
         required: false
         default: ''
 
@@ -24,60 +23,63 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: v3.0-Checkout
+      - name: v4.0-Checkout
         uses: actions/checkout@v4
 
-      - name: v3.0-Install Dependencies
+      - name: v4.0-Environment Setup
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
-
-      - name: v3.0-Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: v3.0-Clone and Install
-        run: |
-          git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
-          cd Manzana-Apple-TV-Plus-Trailers
-          pip install -r requirements.txt
-
-      - name: v3.0-Execute Manzana
-        run: |
-          cd Manzana-Apple-TV-Plus-Trailers
-          
-          # 动态匹配输入序列
-          if [ "${{ github.event.inputs.mode }}" == "4K_HDR_Best" ]; then
-            INPUT_SEQ="0\n13\nall\nall\nall\nall\n"
-          elif [ "${{ github.event.inputs.mode }}" == "1080p_SDR_Best" ]; then
-            INPUT_SEQ="1\n11\nall\nall\nall\nall\n"
-          else
-            INPUT_SEQ="${{ github.event.inputs.custom_sequence }}"
+          pip install -r Manzana-Apple-TV-Plus-Trailers/requirements.txt || true
+          # 注意：如果是第一次运行，需要克隆
+          if [ ! -d "Manzana-Apple-TV-Plus-Trailers" ]; then
+            git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
+            cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
           fi
 
-          echo "🚀 开始精准下载..."
-          printf "$INPUT_SEQ" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
+      # ---------------- 模式 1：探测 ID ----------------
+      - name: v4.0-Probe Mode
+        if: github.event.inputs.action_type == 'Probe_IDs_Only'
+        run: |
+          cd Manzana-Apple-TV-Plus-Trailers
+          echo "🔍 正在抓取该 URL 的所有可用流 ID..."
+          # 通过发送一个错误的输入序列，强制脚本在打印完表格后因输入错误或 EOF 退出
+          # 这样我们就能拿到表格，但不会触发实际下载
+          printf "invalid\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d > ../stream_info.txt 2>&1 || true
+          
+          echo "=== 探测报告摘要 ==="
+          cat ../stream_info.txt | grep -A 100 "Fetching video ranges" > ../Stream_Report.txt
+          cat ../Stream_Report.txt
 
-      - name: v3.0-Precision Extraction
-        if: always()
+      - name: v4.0-Upload Report
+        if: github.event.inputs.action_type == 'Probe_IDs_Only'
+        uses: actions/upload-artifact@v4
+        with:
+          name: Stream_Analysis_Report
+          path: Stream_Report.txt
+
+      # ---------------- 模式 2：正式下载 ----------------
+      - name: v4.0-Execute Download
+        if: github.event.inputs.action_type == 'Formal_Download'
+        run: |
+          cd Manzana-Apple-TV-Plus-Trailers
+          echo "🚀 使用自定义序列启动精准下载: ${{ github.event.inputs.custom_sequence }}"
+          printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
+
+      - name: v4.0-Precision Extraction
+        if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           mkdir -p final_delivery
-          
-          # 基于 v2.2 的审计发现，直接从工具自带的 output 目录提取
           SRC_DIR="./Manzana-Apple-TV-Plus-Trailers/output"
-          
           if [ -d "$SRC_DIR" ]; then
-            echo "📦 发现成品目录，正在转移文件..."
             mv "$SRC_DIR"/* ./final_delivery/
           else
-            echo "❌ 错误：未发现目录 $SRC_DIR，执行保底搜索..."
             find ./Manzana-Apple-TV-Plus-Trailers -name "*.mp4" -exec mv {} ./final_delivery/ \;
           fi
 
-      - name: v3.0-Upload Artifact
+      - name: v4.0-Upload Result
+        if: github.event.inputs.action_type == 'Formal_Download'
         uses: actions/upload-artifact@v4
         with:
-          name: Apple_Trailer_v3.0_Final
+          name: Apple_Trailer_v4.0_Final
           path: final_delivery/*
-          retention-days: 1
