--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v4.1-DeepScan)
+name: Apple Trailer Manzana (v4.2-Observer)
 
 on:
   workflow_dispatch:
@@ -23,69 +23,64 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: v4.1-Checkout
+      - name: v4.2-Checkout
         uses: actions/checkout@v4
 
-      - name: v4.1-Setup
+      - name: v4.2-Setup
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
 
-      # ---------------- 模式 1：深度探测 ----------------
-      - name: v4.1-Deep Probe
+      # ---------------- 模式 1：单次精准探测 ----------------
+      - name: v4.2-Probe Mode
         if: github.event.inputs.action_type == 'Probe_IDs_Only'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🔍 正在进行深度扫描，请稍候约 20 秒..."
+          echo "🔍 正在抓取流信息..."
           
-          # 使用 timeout 确保在开始下载前退出
-          # 预填 0 序列诱导所有表格弹出
-          timeout 40s python manzana.py "${{ github.event.inputs.video_url }}" -d <<EOF || true
-          0
-          0
-          0
-          0
-          0
-          0
-          EOF
+          # 使用 printf 预填序列，将整个交互过程保存到 raw_log.txt
+          # 序列设为 0\n0\n0\n0\n0\n0\n 以快速走完流程
+          printf "0\n0\n0\n0\n0\n0\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d > ../raw_log.txt 2>&1 || true
           
-          # 捕获所有带表格边框的行，这些通常是 ID 列表
-          # 将结果重定向到报告
-          python manzana.py "${{ github.event.inputs.video_url }}" -d <<EOF | grep -E "│|╭|╰|ID|Codec|Bitrate|Language" > ../Stream_Report.txt || true
-          0
-          0
-          0
-          0
-          0
-          0
-          EOF
+          cd ..
+          echo "=== 正在整理探测报告 ==="
+          
+          # 提取逻辑：从第一个表格开始截取，直到日志结束
+          # 移除 ANSI 颜色代码，保留纯文本表格
+          sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_log.txt > clean_log.txt
+          
+          # 过滤出所有包含表格字符和关键信息的行
+          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|INFO" clean_log.txt > Stream_Report.txt
+          
+          echo "--- 报告预览 ---"
+          cat Stream_Report.txt
 
-          echo "=== 扫描完成：以下为捕获到的 ID 概览 ==="
-          cat ../Stream_Report.txt
-
-      - name: v4.1-Upload Report
+      - name: v4.2-Upload Report
         if: github.event.inputs.action_type == 'Probe_IDs_Only'
         uses: actions/upload-artifact@v4
         with:
-          name: Full_ID_Report
+          name: Full_ID_Report_v4.2
           path: Stream_Report.txt
 
-      # ---------------- 模式 2：正式下载 (沿用 v4.0) ----------------
-      - name: v4.1-Execute Download
+      # ---------------- 模式 2：正式下载 ----------------
+      - name: v4.2-Execute Download
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
           printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
-      - name: v4.1-Precision Extraction
+      - name: v4.2-Precision Extraction
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           mkdir -p final_delivery
-          find ./Manzana-Apple-TV-Plus-Trailers/output -type f -exec mv {} ./final_delivery/ \; || find ./Manzana-Apple-TV-Plus-Trailers -name "*.mp4" -exec mv {} ./final_delivery/ \;
+          # 移动 Manzana 自动生成的 output 目录下的文件
+          [ -d "./Manzana-Apple-TV-Plus-Trailers/output" ] && mv ./Manzana-Apple-TV-Plus-Trailers/output/* ./final_delivery/ || true
+          # 保底移动根目录下可能漏掉的文件
+          find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 1 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \;
 
-      - name: v4.1-Upload Result
+      - name: v4.2-Upload Result
         if: github.event.inputs.action_type == 'Formal_Download'
         uses: actions/upload-artifact@v4
         with:
