--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v4.2-Observer)
+name: Apple Trailer Manzana (v5.0-Universal)
 
 on:
   workflow_dispatch:
@@ -8,13 +8,13 @@ on:
         required: true
       action_type:
         type: choice
-        description: '第一步：探测所有 ID；第二步：正式下载'
+        description: '模式选择'
         options:
-          - 'Probe_IDs_Only'
+          - 'Probe_All_Details'
           - 'Formal_Download'
-        default: 'Probe_IDs_Only'
+        default: 'Probe_All_Details'
       custom_sequence:
-        description: '【正式下载】填入序列 (如 0\n13\nall\n4\nall\n2\n)'
+        description: '【正式下载填入】例如: 2\n25\nall\nall\nall\nall\n'
         required: false
         default: ''
 
@@ -23,66 +23,68 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: v4.2-Checkout
+      - name: v5.0-Checkout
         uses: actions/checkout@v4
 
-      - name: v4.2-Setup
+      - name: v5.0-Setup Env
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
 
-      # ---------------- 模式 1：单次精准探测 ----------------
-      - name: v4.2-Probe Mode
-        if: github.event.inputs.action_type == 'Probe_IDs_Only'
+      # ---------------- 探测模式：获取全量菜单 ----------------
+      - name: v5.0-Universal Probe
+        if: github.event.inputs.action_type == 'Probe_All_Details'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🔍 正在抓取流信息..."
+          echo "🔍 正在进行全量扫描 (inducing all tables)..."
           
-          # 使用 printf 预填序列，将整个交互过程保存到 raw_log.txt
-          # 序列设为 0\n0\n0\n0\n0\n0\n 以快速走完流程
-          printf "0\n0\n0\n0\n0\n0\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d > ../raw_log.txt 2>&1 || true
+          # 1. 运行并实时保存原始日志，同时在检测到开始下载时杀掉进程
+          # 使用 all 序列诱导最全表格
+          (printf "all\nall\nall\nall\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d 2>&1 | tee ../raw_full.log) & 
           
+          # 等待探测，直到日志出现下载信号或超时 60s
+          for i in {1..60}; do
+            if grep -q "Downloading segments" ../raw_full.log; then
+              echo "✅ 已捕获所有表格，正在拦截下载以节省流量..."
+              pkill -f python
+              break
+            fi
+            sleep 1
+          done
+          
+          # 2. 清洗日志：移除颜色代码，提取表格
           cd ..
-          echo "=== 正在整理探测报告 ==="
+          sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_full.log > Full_Report.txt
           
-          # 提取逻辑：从第一个表格开始截取，直到日志结束
-          # 移除 ANSI 颜色代码，保留纯文本表格
-          sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_log.txt > clean_log.txt
-          
-          # 过滤出所有包含表格字符和关键信息的行
-          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|INFO" clean_log.txt > Stream_Report.txt
-          
-          echo "--- 报告预览 ---"
-          cat Stream_Report.txt
+          echo "--- 报告预览 (ID 菜单) ---"
+          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_Report.txt | head -n 50
 
-      - name: v4.2-Upload Report
-        if: github.event.inputs.action_type == 'Probe_IDs_Only'
+      - name: v5.0-Upload Report
+        if: github.event.inputs.action_type == 'Probe_All_Details'
         uses: actions/upload-artifact@v4
         with:
-          name: Full_ID_Report_v4.2
-          path: Stream_Report.txt
+          name: Full_ID_Menu
+          path: Full_Report.txt
 
-      # ---------------- 模式 2：正式下载 ----------------
-      - name: v4.2-Execute Download
+      # ---------------- 正式下载：精准交付 ----------------
+      - name: v5.0-Execute Download
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
           printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
-      - name: v4.2-Precision Extraction
+      - name: v5.0-Extraction
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           mkdir -p final_delivery
-          # 移动 Manzana 自动生成的 output 目录下的文件
           [ -d "./Manzana-Apple-TV-Plus-Trailers/output" ] && mv ./Manzana-Apple-TV-Plus-Trailers/output/* ./final_delivery/ || true
-          # 保底移动根目录下可能漏掉的文件
           find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 1 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \;
 
-      - name: v4.2-Upload Result
+      - name: v5.0-Upload Result
         if: github.event.inputs.action_type == 'Formal_Download'
         uses: actions/upload-artifact@v4
         with:
-          name: Apple_Video_Final
+          name: Apple_Video_v5.0
           path: final_delivery/*
