--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v5.0-Universal)
+name: Apple Trailer Manzana (v5.5-Master)
 
 on:
   workflow_dispatch:
@@ -8,13 +8,13 @@ on:
         required: true
       action_type:
         type: choice
-        description: '模式选择'
+        description: '模式选择 (先探测 ID，后正式下载)'
         options:
           - 'Probe_All_Details'
           - 'Formal_Download'
         default: 'Probe_All_Details'
       custom_sequence:
-        description: '【正式下载填入】例如: 2\n25\nall\nall\nall\nall\n'
+        description: '【正式下载填入】例如: 2\n52\nall\n4,45\nall\n2,50\n'
         required: false
         default: ''
 
@@ -23,68 +23,74 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: v5.0-Checkout
+      - name: Master-Checkout
         uses: actions/checkout@v4
 
-      - name: v5.0-Setup Env
+      - name: Master-Setup Env
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
 
-      # ---------------- 探测模式：获取全量菜单 ----------------
-      - name: v5.0-Universal Probe
+      # ---------------- 模式 1：混合探测 (诱导全量音频/字幕) ----------------
+      - name: Master-Hybrid Probe
         if: github.event.inputs.action_type == 'Probe_All_Details'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🔍 正在进行全量扫描 (inducing all tables)..."
+          echo "🔍 正在进行混合扫描 (诱导全量 ID 表格)..."
           
-          # 1. 运行并实时保存原始日志，同时在检测到开始下载时杀掉进程
-          # 使用 all 序列诱导最全表格
-          (printf "all\nall\nall\nall\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d 2>&1 | tee ../raw_full.log) & 
+          # 使用混合序列：0(SDR) -> 13(1080p) -> 其余全部 all
+          # 这样能绕过 Range 报错，并强迫展示所有音频和字幕 ID
+          (printf "0\n13\nall\nall\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d 2>&1 | tee ../raw_full.log) & 
           
-          # 等待探测，直到日志出现下载信号或超时 60s
+          # 监控日志，检测到开始下载时杀掉进程
           for i in {1..60}; do
             if grep -q "Downloading segments" ../raw_full.log; then
-              echo "✅ 已捕获所有表格，正在拦截下载以节省流量..."
+              echo "✅ 已捕获全量菜单，正在拦截下载..."
               pkill -f python
               break
             fi
             sleep 1
           done
           
-          # 2. 清洗日志：移除颜色代码，提取表格
+          # 清理 ANSI 颜色代码并保存报告
           cd ..
-          sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_full.log > Full_Report.txt
+          sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_full.log > Full_ID_Report.txt
           
-          echo "--- 报告预览 (ID 菜单) ---"
-          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_Report.txt | head -n 50
+          echo "--- 探测结果预览 ---"
+          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_ID_Report.txt
 
-      - name: v5.0-Upload Report
+      - name: Master-Upload Report
         if: github.event.inputs.action_type == 'Probe_All_Details'
         uses: actions/upload-artifact@v4
         with:
-          name: Full_ID_Menu
-          path: Full_Report.txt
+          name: Full_ID_Report
+          path: Full_ID_Report.txt
 
-      # ---------------- 正式下载：精准交付 ----------------
-      - name: v5.0-Execute Download
+      # ---------------- 模式 2：正式下载 (高精度交付) ----------------
+      - name: Master-Execute Download
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
+          echo "🚀 启动精准下载，序列: ${{ github.event.inputs.custom_sequence }}"
           printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
-      - name: v5.0-Extraction
+      - name: Master-Extraction
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           mkdir -p final_delivery
-          [ -d "./Manzana-Apple-TV-Plus-Trailers/output" ] && mv ./Manzana-Apple-TV-Plus-Trailers/output/* ./final_delivery/ || true
-          find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 1 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \;
+          # 优先提取工具默认输出目录
+          if [ -d "./Manzana-Apple-TV-Plus-Trailers/output" ]; then
+            mv ./Manzana-Apple-TV-Plus-Trailers/output/* ./final_delivery/
+          fi
+          # 保底提取根目录所有 mp4
+          find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 2 -name "*.mp4" -exec mv {} ./final_delivery/ \; 2>/dev/null || true
 
-      - name: v5.0-Upload Result
+      - name: Master-Upload Result
         if: github.event.inputs.action_type == 'Formal_Download'
         uses: actions/upload-artifact@v4
         with:
-          name: Apple_Video_v5.0
+          name: Apple_Video_Final
           path: final_delivery/*
+          retention-days: 7
