--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v5.5-Master)
+name: Apple Trailer Manzana (v5.6-Final)
 
 on:
   workflow_dispatch:
@@ -8,13 +8,13 @@ on:
         required: true
       action_type:
         type: choice
-        description: '模式选择 (先探测 ID，后正式下载)'
+        description: '模式选择 (第一步探测菜单，第二步正式下载)'
         options:
           - 'Probe_All_Details'
           - 'Formal_Download'
         default: 'Probe_All_Details'
       custom_sequence:
-        description: '【正式下载填入】例如: 2\n52\nall\n4,45\nall\n2,50\n'
+        description: '【正式下载填入】根据探测报告组合 ID，例如: 0\n13\nall\n4\nall\n2\n'
         required: false
         default: ''
 
@@ -23,71 +23,74 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Master-Checkout
+      - name: v5.6-Checkout
         uses: actions/checkout@v4
 
-      - name: Master-Setup Env
+      - name: v5.6-Environment Setup
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
-          git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
+          if [ ! -d "Manzana-Apple-TV-Plus-Trailers" ]; then
+            git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
+          fi
           cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
 
-      # ---------------- 模式 1：混合探测 (诱导全量音频/字幕) ----------------
-      - name: Master-Hybrid Probe
+      # ---------------- 模式 1：极致探测模式 (全量 ID 菜单) ----------------
+      - name: v5.6-Precision Probe
         if: github.event.inputs.action_type == 'Probe_All_Details'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🔍 正在进行混合扫描 (诱导全量 ID 表格)..."
+          echo "🔍 正在进行混合诱导探测 (Range=0, Stream=13, Others=all)..."
           
-          # 使用混合序列：0(SDR) -> 13(1080p) -> 其余全部 all
-          # 这样能绕过 Range 报错，并强迫展示所有音频和字幕 ID
+          # 启动后台进程：输入 0 -> 13 -> all -> all -> all -> all
           (printf "0\n13\nall\nall\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d 2>&1 | tee ../raw_full.log) & 
           
-          # 监控日志，检测到开始下载时杀掉进程
+          # 提前熔断监控：一旦出现 Fetching segments 就杀掉进程，防止进入数千个分片的抓取阶段
           for i in {1..60}; do
-            if grep -q "Downloading segments" ../raw_full.log; then
-              echo "✅ 已捕获全量菜单，正在拦截下载..."
+            if grep -q "Fetching segments" ../raw_full.log; then
+              echo "✅ 已捕获 80+ ID 全量菜单！正在拦截下载以节省资源..."
               pkill -f python
               break
             fi
             sleep 1
           done
           
-          # 清理 ANSI 颜色代码并保存报告
+          # 清洗日志：移除 ANSI 颜色代码，保留纯文本表格
           cd ..
           sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_full.log > Full_ID_Report.txt
           
-          echo "--- 探测结果预览 ---"
-          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_ID_Report.txt
+          echo "=== 探测报告 (截取部分) ==="
+          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_ID_Report.txt | tail -n 20
 
-      - name: Master-Upload Report
+      - name: v5.6-Upload ID Report
         if: github.event.inputs.action_type == 'Probe_All_Details'
         uses: actions/upload-artifact@v4
         with:
           name: Full_ID_Report
           path: Full_ID_Report.txt
 
-      # ---------------- 模式 2：正式下载 (高精度交付) ----------------
-      - name: Master-Execute Download
+      # ---------------- 模式 2：正式下载模式 (高精度交付) ----------------
+      - name: v5.6-Execute Download
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🚀 启动精准下载，序列: ${{ github.event.inputs.custom_sequence }}"
+          echo "🚀 正在根据自定义 ID 序列启动下载: "
+          echo "${{ github.event.inputs.custom_sequence }}"
+          # 实际执行下载
           printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
-      - name: Master-Extraction
+      - name: v5.6-Final Extraction
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           mkdir -p final_delivery
-          # 优先提取工具默认输出目录
+          # 尝试从 output 目录移动
           if [ -d "./Manzana-Apple-TV-Plus-Trailers/output" ]; then
             mv ./Manzana-Apple-TV-Plus-Trailers/output/* ./final_delivery/
           fi
-          # 保底提取根目录所有 mp4
-          find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 2 -name "*.mp4" -exec mv {} ./final_delivery/ \; 2>/dev/null || true
+          # 兜底：搜索根目录下所有生成的视频文件
+          find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 2 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \; 2>/dev/null || true
 
-      - name: Master-Upload Result
+      - name: v5.6-Upload Video
         if: github.event.inputs.action_type == 'Formal_Download'
         uses: actions/upload-artifact@v4
         with:
