--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v5.6-Final)
+name: Apple Trailer Manzana (v5.7-Elite)
 
 on:
   workflow_dispatch:
@@ -14,7 +14,7 @@ on:
           - 'Formal_Download'
         default: 'Probe_All_Details'
       custom_sequence:
-        description: '【正式下载填入】根据探测报告组合 ID，例如: 0\n13\nall\n4\nall\n2\n'
+        description: '【正式下载填入】序列示例: 0\n13\nall\n4\nall\n2\n'
         required: false
         default: ''
 
@@ -23,74 +23,71 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: v5.6-Checkout
+      - name: v5.7-Checkout
         uses: actions/checkout@v4
 
-      - name: v5.6-Environment Setup
+      - name: v5.7-Environment Setup
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
-          if [ ! -d "Manzana-Apple-TV-Plus-Trailers" ]; then
-            git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
-          fi
+          git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
 
-      # ---------------- 模式 1：极致探测模式 (全量 ID 菜单) ----------------
-      - name: v5.6-Precision Probe
+      # ---------------- 模式 1：优雅探测模式 ----------------
+      - name: v5.7-Precision Probe
         if: github.event.inputs.action_type == 'Probe_All_Details'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🔍 正在进行混合诱导探测 (Range=0, Stream=13, Others=all)..."
+          echo "🔍 启动混合诱导探测 (Range=0, Stream=13, Others=all)..."
           
-          # 启动后台进程：输入 0 -> 13 -> all -> all -> all -> all
+          # 启动后台进程并记录其 PID
           (printf "0\n13\nall\nall\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d 2>&1 | tee ../raw_full.log) & 
+          MANZANA_PID=$!
           
-          # 提前熔断监控：一旦出现 Fetching segments 就杀掉进程，防止进入数千个分片的抓取阶段
+          # 精准熔断监控
           for i in {1..60}; do
             if grep -q "Fetching segments" ../raw_full.log; then
-              echo "✅ 已捕获 80+ ID 全量菜单！正在拦截下载以节省资源..."
-              pkill -f python
+              echo "✅ 已捕获全量 ID 菜单！正在执行优雅拦截..."
+              # 只杀掉刚才启动的那个特定的进程
+              kill $MANZANA_PID 2>/dev/null || true
               break
             fi
             sleep 1
           done
           
-          # 清洗日志：移除 ANSI 颜色代码，保留纯文本表格
+          # 清理日志
           cd ..
           sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_full.log > Full_ID_Report.txt
           
-          echo "=== 探测报告 (截取部分) ==="
-          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_ID_Report.txt | tail -n 20
+          echo "=== 探测报告预览 (表格底部) ==="
+          grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_ID_Report.txt | tail -n 25
 
-      - name: v5.6-Upload ID Report
+      - name: v5.7-Upload ID Report
         if: github.event.inputs.action_type == 'Probe_All_Details'
         uses: actions/upload-artifact@v4
         with:
           name: Full_ID_Report
           path: Full_ID_Report.txt
 
-      # ---------------- 模式 2：正式下载模式 (高精度交付) ----------------
-      - name: v5.6-Execute Download
+      # ---------------- 模式 2：正式下载模式 ----------------
+      - name: v5.7-Execute Download
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🚀 正在根据自定义 ID 序列启动下载: "
+          echo "🚀 启动精准下载序列: "
           echo "${{ github.event.inputs.custom_sequence }}"
-          # 实际执行下载
           printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
-      - name: v5.6-Final Extraction
+      - name: v5.7-Final Extraction
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           mkdir -p final_delivery
-          # 尝试从 output 目录移动
           if [ -d "./Manzana-Apple-TV-Plus-Trailers/output" ]; then
             mv ./Manzana-Apple-TV-Plus-Trailers/output/* ./final_delivery/
           fi
-          # 兜底：搜索根目录下所有生成的视频文件
           find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 2 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \; 2>/dev/null || true
 
-      - name: v5.6-Upload Video
+      - name: v5.7-Upload Video
         if: github.event.inputs.action_type == 'Formal_Download'
         uses: actions/upload-artifact@v4
         with:
