--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v5.7-Elite)
+name: Apple Trailer Manzana (v5.8-Hyper)
 
 on:
   workflow_dispatch:
@@ -8,13 +8,13 @@ on:
         required: true
       action_type:
         type: choice
-        description: '模式选择 (第一步探测菜单，第二步正式下载)'
+        description: '模式选择'
         options:
           - 'Probe_All_Details'
           - 'Formal_Download'
         default: 'Probe_All_Details'
       custom_sequence:
-        description: '【正式下载填入】序列示例: 0\n13\nall\n4\nall\n2\n'
+        description: '【正式下载填入】例如: 0\n13\nall\n4\nall\n2\n'
         required: false
         default: ''
 
@@ -23,63 +23,62 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: v5.7-Checkout
+      - name: v5.8-Checkout
         uses: actions/checkout@v4
 
-      - name: v5.7-Environment Setup
+      - name: v5.8-Environment Setup
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg gpac
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
 
-      # ---------------- 模式 1：优雅探测模式 ----------------
-      - name: v5.7-Precision Probe
+      # ---------------- 模式 1：超精拦截探测 (极致利落) ----------------
+      - name: v5.8-Hyper Probe
         if: github.event.inputs.action_type == 'Probe_All_Details'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🔍 启动混合诱导探测 (Range=0, Stream=13, Others=all)..."
+          echo "🔍 启动超前拦截探测 (拦截点: Fetching m3u8)..."
           
-          # 启动后台进程并记录其 PID
+          # 启动探测
           (printf "0\n13\nall\nall\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d 2>&1 | tee ../raw_full.log) & 
-          MANZANA_PID=$!
           
-          # 精准熔断监控
+          # 监控逻辑：提前到 m3u8 阶段
           for i in {1..60}; do
-            if grep -q "Fetching segments" ../raw_full.log; then
-              echo "✅ 已捕获全量 ID 菜单！正在执行优雅拦截..."
-              # 只杀掉刚才启动的那个特定的进程
-              kill $MANZANA_PID 2>/dev/null || true
+            if grep -q "Fetching m3u8" ../raw_full.log; then
+              # 发现目标后微停 1 秒，确保最后的表格数据完全从内存写入磁盘
+              sleep 1
+              echo "✅ 检测到菜单已生成完毕，正在执行瞬杀..."
+              pkill -9 -f python 2>/dev/null || true
               break
             fi
             sleep 1
           done
           
-          # 清理日志
+          # 日志清洗
           cd ..
           sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_full.log > Full_ID_Report.txt
           
-          echo "=== 探测报告预览 (表格底部) ==="
+          echo "=== 探测报告预览 (最终锁定 ID) ==="
           grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_ID_Report.txt | tail -n 25
 
-      - name: v5.7-Upload ID Report
+      - name: v5.8-Upload ID Report
         if: github.event.inputs.action_type == 'Probe_All_Details'
         uses: actions/upload-artifact@v4
         with:
           name: Full_ID_Report
           path: Full_ID_Report.txt
 
-      # ---------------- 模式 2：正式下载模式 ----------------
-      - name: v5.7-Execute Download
+      # ---------------- 模式 2：正式下载 (跳过过程打印) ----------------
+      - name: v5.8-Execute Download
         if: github.event.inputs.action_type == 'Formal_Download'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
-          echo "🚀 启动精准下载序列: "
-          echo "${{ github.event.inputs.custom_sequence }}"
+          echo "🚀 启动下载，序列: ${{ github.event.inputs.custom_sequence }}"
           printf "${{ github.event.inputs.custom_sequence }}" | python manzana.py "${{ github.event.inputs.video_url }}" -d | grep -v "Fetching segments"
 
-      - name: v5.7-Final Extraction
-        if: github.event.inputs.action_type == 'Formal_Download'
+      - name: v5.8-Final Extraction
+        if: always() && github.event.inputs.action_type == 'Formal_Download'
         run: |
           mkdir -p final_delivery
           if [ -d "./Manzana-Apple-TV-Plus-Trailers/output" ]; then
@@ -87,10 +86,9 @@ jobs:
           fi
           find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 2 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \; 2>/dev/null || true
 
-      - name: v5.7-Upload Video
-        if: github.event.inputs.action_type == 'Formal_Download'
+      - name: v5.8-Upload Video
+        if: always() && github.event.inputs.action_type == 'Formal_Download'
         uses: actions/upload-artifact@v4
         with:
-          name: Apple_Video_Final
+          name: Apple_Video_Result
           path: final_delivery/*
-          retention-days: 7
