--- a/.github/workflows/manzana_download.yml
+++ b/.github/workflows/manzana_download.yml
@@ -1,4 +1,4 @@
-name: Apple Trailer Manzana (v5.6-Final)
+name: Apple Trailer Manzana (v5.6-Final-Inspect)
 
 on:
   workflow_dispatch:
@@ -8,13 +8,13 @@ on:
         required: true
       action_type:
         type: choice
-        description: '模式选择 (第一步探测菜单，第二步正式下载)'
+        description: '模式选择 (1.探测菜单 2.正式下载)'
         options:
           - 'Probe_All_Details'
           - 'Formal_Download'
         default: 'Probe_All_Details'
       custom_sequence:
-        description: '【正式下载填入】根据探测报告组合 ID，例如: 0\n13\nall\n4\nall\n2\n'
+        description: '【正式下载填入】序列示例: 1\n11\n0\n0\n0\n2\n'
         required: false
         default: ''
 
@@ -33,17 +33,13 @@ jobs:
           git clone https://github.com/dropcreations/Manzana-Apple-TV-Plus-Trailers.git
           cd Manzana-Apple-TV-Plus-Trailers && pip install -r requirements.txt
 
-      # ---------------- 模式 1：探测模式 (拦截 Fetching 信号) ----------------
+      # ---------------- 模式 1：探测模式 ----------------
       - name: v5.6-Precision Probe
         if: github.event.inputs.action_type == 'Probe_All_Details'
         run: |
           cd Manzana-Apple-TV-Plus-Trailers
           echo "🔍 正在启动混合诱导探测..."
-          
-          # 启动后台进程
           (printf "0\n13\nall\nall\nall\nall\n" | python manzana.py "${{ github.event.inputs.video_url }}" -d 2>&1 | tee ../raw_full.log) & 
-          
-          # 监控逻辑：检测到 Fetching segments 即刻强行熔断
           for i in {1..60}; do
             if grep -q "Fetching segments" ../raw_full.log; then
               echo "✅ 已捕获全量 ID 菜单！正在拦截..."
@@ -52,11 +48,8 @@ jobs:
             fi
             sleep 1
           done
-          
-          # 清理日志 ANSI 颜色
           cd ..
           sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" raw_full.log > Full_ID_Report.txt
-          
           echo "=== 探测报告预览 ==="
           grep -E "│|╭|╰|ID|Codec|Bitrate|Language|Content|Range" Full_ID_Report.txt | tail -n 25
 
@@ -83,6 +76,21 @@ jobs:
             mv ./Manzana-Apple-TV-Plus-Trailers/output/* ./final_delivery/
           fi
           find ./Manzana-Apple-TV-Plus-Trailers -maxdepth 2 -type f \( -name "*.mp4" -o -name "*.mkv" \) -exec mv {} ./final_delivery/ \; 2>/dev/null || true
+
+      # ---------------- 新增步骤：FFmpeg 自动信息查询 ----------------
+      - name: v5.6-Media-Inspect
+        if: github.event.inputs.action_type == 'Formal_Download'
+        run: |
+          echo "📊 正在通过 FFmpeg 深度查询视频流信息..."
+          for file in ./final_delivery/*; do
+            if [[ "$file" == *.mp4 || "$file" == *.mkv ]]; then
+              echo "------------------------------------------------"
+              echo "🎬 文件名: $(basename "$file")"
+              # ffprobe 查询流的编码、分辨率、语言等核心信息
+              ffprobe -v error -show_entries format=size,duration,bit_rate : stream=codec_name,codec_type,bit_rate,width,height,display_aspect_ratio : stream_tags=language,title -of default=noprint_wrappers=1 "$file"
+              echo "------------------------------------------------"
+            fi
+          done
 
       - name: Upload Video
         if: github.event.inputs.action_type == 'Formal_Download'
